do not use handler

--- a/ansible/roles/clients/tasks/main.yml
+++ b/ansible/roles/clients/tasks/main.yml
@@ -14,4 +14,8 @@
     mode: 0644
     owner: root
     group: root
-  notify: netplan apply
+  register: add_static_route
+
+- name: netplan apply
+  command: netplan apply
+  when: add_static_route is changed
