--- a/shared/k8s-configs/kube-flannel.yml
+++ b/shared/k8s-configs/kube-flannel.yml
@@ -202,6 +202,7 @@ spec:
         args:
         - --ip-masq
         - --kube-subnet-mgr
+        - --iface=enp0s8
         resources:
           requests:
             cpu: "100m"
@@ -280,6 +281,7 @@ spec:
         args:
         - --ip-masq
         - --kube-subnet-mgr
+        - --iface=enp0s8
         resources:
           requests:
             cpu: "100m"
@@ -358,6 +360,7 @@ spec:
         args:
         - --ip-masq
         - --kube-subnet-mgr
+        - --iface=enp0s8
         resources:
           requests:
             cpu: "100m"
@@ -436,6 +439,7 @@ spec:
         args:
         - --ip-masq
         - --kube-subnet-mgr
+        - --iface=enp0s8
         resources:
           requests:
             cpu: "100m"
