--- a/ansible/roles/clients/files/99-static-route.yaml
+++ b/ansible/roles/clients/files/99-static-route.yaml
@@ -7,3 +7,5 @@ network:
       routes:
         - to: 172.17.0.0/24
           via: 172.17.1.1
+        - to: 172.17.254.0/24
+          via: 172.17.1.1
