add void-buggy-ips: true

--- a/shared/k8s-configs/metallb-bgp.yaml
+++ b/shared/k8s-configs/metallb-bgp.yaml
@@ -13,5 +13,6 @@ data:
     address-pools:
     - name: my-ip-space
       protocol: bgp
+      avoid-buggy-ips: true
       addresses:
       - 172.17.254.0/24
