use ansible_distribution_release instead of lsb_release -cs output

--- a/ansible/roles/k8s/tasks/main.yml
+++ b/ansible/roles/k8s/tasks/main.yml
@@ -1,8 +1,4 @@
 ---
-- name: register codename
-  shell: lsb_release -cs
-  register: codename
-
 - name: create docker group
   group:
     name: docker
@@ -20,7 +16,7 @@
 
 - name: install apt repository for docker-ce
   apt_repository:
-    repo: "deb https://download.docker.com/linux/ubuntu {{ codename.stdout }} stable"
+    repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
     filename: docker-ce
     state: present
 
