--- a/ansible/roles/bgp-router/files/gobgpd.toml
+++ b/ansible/roles/bgp-router/files/gobgpd.toml
@@ -1,6 +1,16 @@
+[zebra]
+  [zebra.config]
+    enabled = true
+    url = "unix:/var/run/quagga/zserv.api"
+    redistribute-route-type-list = ["connect"]
+    version = 2
+
 [global.config]
   as = 64512
   router-id = "172.17.1.1"
+
+[global.use-multiple-paths.config]
+  enabled = true
 
 [[neighbors]]
   [neighbors.config]
